# homework

./: CMakeLists.txt  README.md  main.cpp  main1.cpp  main2.cpp  main3.cpp  readme.md  solve.sh
old homework/homework1/: main.cpp  main2.cpp  solve.sh
old homework/homework1/test/: test.cpp  test.h
old homework/homework2/: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp
old homework/homework3/: CMakeLists.txt  main1.cpp
old homework/homework3/hw3_t1/: f_mat_and_c_mat.yml
